fix: pre tag bottom margin too big when line numbers < 3 (#74)

--- a/ui/src/components/QMarkdown.sass
+++ b/ui/src/components/QMarkdown.sass
@@ -6,7 +6,7 @@
 
   pre
     border-radius: $generic-border-radius
-    padding: 5px 10px
+    padding: 5px 10px 0 5px
     background-size: 1.5em 1.5em
     background-origin: content-box
     background-attachment: local
@@ -27,7 +27,7 @@
     line-height: 1.5em
     tab-size: 4
     hyphens: none
-    margin-bottom: 1rem
+    margin-bottom: 8px
 
   pre code
     // white-space: pre-wrap
@@ -221,10 +221,9 @@
     font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace
     border-radius: $generic-border-radius
     margin-bottom: 16px
-    padding-right: 4px
 
   &--line-numbers
-    padding: 5px 5px 0 5px
+    padding: 5px
 
   &--line-number
     color: $grey-6
